--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -66,7 +66,7 @@
   .settings {
     margin-top: 1.875rem;
   }
-   @media screen and (min-width: 768px) {
+   @media screen and (min-width: 850px) {
     display: block;
     width: 17.6875rem;
   }
